// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fixtures test all.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "properties": Array [
    Object {
      "key": "empty_string",
      "keyRange": Object {
        "end": 16,
        "start": 5,
      },
      "parent": [Circular],
      "type": "string",
      "value": "",
      "valueRange": Object {
        "end": 20,
        "start": 21,
      },
    },
    Object {
      "key": "string",
      "keyRange": Object {
        "end": 32,
        "start": 27,
      },
      "parent": [Circular],
      "type": "string",
      "value": "string",
      "valueRange": Object {
        "end": 42,
        "start": 37,
      },
    },
    Object {
      "key": "\\\\\\"",
      "keyRange": Object {
        "end": 50,
        "start": 49,
      },
      "parent": [Circular],
      "type": "string",
      "value": "\\\\\\"",
      "valueRange": Object {
        "end": 55,
        "start": 54,
      },
    },
    Object {
      "key": "number",
      "keyRange": Object {
        "end": 67,
        "start": 62,
      },
      "parent": [Circular],
      "type": "number",
      "value": "0",
      "valueRange": Object {
        "end": 71,
        "start": 71,
      },
    },
    Object {
      "key": "null",
      "keyRange": Object {
        "end": 80,
        "start": 77,
      },
      "parent": [Circular],
      "type": "null",
      "value": "null",
      "valueRange": Object {
        "end": 87,
        "start": 84,
      },
    },
    Object {
      "key": "false",
      "keyRange": Object {
        "end": 97,
        "start": 93,
      },
      "parent": [Circular],
      "type": "boolean",
      "value": "false",
      "valueRange": Object {
        "end": 104,
        "start": 100,
      },
    },
    Object {
      "key": "true",
      "keyRange": Object {
        "end": 113,
        "start": 110,
      },
      "parent": [Circular],
      "type": "boolean",
      "value": "true",
      "valueRange": Object {
        "end": 120,
        "start": 117,
      },
    },
    Object {
      "key": "array",
      "keyRange": Object {
        "end": 130,
        "start": 126,
      },
      "parent": [Circular],
      "properties": Array [],
      "type": "array",
      "valueRange": Object {
        "end": 135,
        "start": 134,
      },
    },
    Object {
      "key": "object",
      "keyRange": Object {
        "end": 146,
        "start": 141,
      },
      "parent": [Circular],
      "properties": Array [],
      "type": "object",
      "valueRange": Object {
        "end": 151,
        "start": 150,
      },
    },
    Object {
      "key": "deep",
      "keyRange": Object {
        "end": 160,
        "start": 157,
      },
      "parent": [Circular],
      "properties": Array [
        Object {
          "key": 0,
          "keyRange": null,
          "parent": [Circular],
          "properties": Array [
            Object {
              "key": "empty_string",
              "keyRange": Object {
                "end": 190,
                "start": 179,
              },
              "parent": [Circular],
              "type": "string",
              "value": "",
              "valueRange": Object {
                "end": 194,
                "start": 195,
              },
            },
            Object {
              "key": "string",
              "keyRange": Object {
                "end": 210,
                "start": 205,
              },
              "parent": [Circular],
              "type": "string",
              "value": "string",
              "valueRange": Object {
                "end": 220,
                "start": 215,
              },
            },
            Object {
              "key": "\\\\\\"",
              "keyRange": Object {
                "end": 232,
                "start": 231,
              },
              "parent": [Circular],
              "type": "string",
              "value": "\\\\\\"",
              "valueRange": Object {
                "end": 237,
                "start": 236,
              },
            },
            Object {
              "key": "number",
              "keyRange": Object {
                "end": 253,
                "start": 248,
              },
              "parent": [Circular],
              "type": "number",
              "value": "0",
              "valueRange": Object {
                "end": 257,
                "start": 257,
              },
            },
            Object {
              "key": "null",
              "keyRange": Object {
                "end": 270,
                "start": 267,
              },
              "parent": [Circular],
              "type": "null",
              "value": "null",
              "valueRange": Object {
                "end": 277,
                "start": 274,
              },
            },
            Object {
              "key": "false",
              "keyRange": Object {
                "end": 291,
                "start": 287,
              },
              "parent": [Circular],
              "type": "boolean",
              "value": "false",
              "valueRange": Object {
                "end": 298,
                "start": 294,
              },
            },
            Object {
              "key": "true",
              "keyRange": Object {
                "end": 311,
                "start": 308,
              },
              "parent": [Circular],
              "type": "boolean",
              "value": "true",
              "valueRange": Object {
                "end": 318,
                "start": 315,
              },
            },
          ],
          "type": "object",
          "valueRange": Object {
            "end": 324,
            "start": 170,
          },
        },
        Object {
          "key": 1,
          "keyRange": null,
          "parent": [Circular],
          "properties": Array [
            Object {
              "key": 0,
              "keyRange": null,
              "parent": [Circular],
              "type": "number",
              "value": "1",
              "valueRange": Object {
                "end": 332,
                "start": 332,
              },
            },
            Object {
              "key": 1,
              "keyRange": null,
              "parent": [Circular],
              "type": "string",
              "value": "2",
              "valueRange": Object {
                "end": 335,
                "start": 335,
              },
            },
            Object {
              "key": 2,
              "keyRange": null,
              "parent": [Circular],
              "type": "null",
              "value": "null",
              "valueRange": Object {
                "end": 341,
                "start": 338,
              },
            },
            Object {
              "key": 3,
              "keyRange": null,
              "parent": [Circular],
              "type": "boolean",
              "value": "false",
              "valueRange": Object {
                "end": 347,
                "start": 343,
              },
            },
            Object {
              "key": 4,
              "keyRange": null,
              "parent": [Circular],
              "type": "boolean",
              "value": "true",
              "valueRange": Object {
                "end": 352,
                "start": 349,
              },
            },
          ],
          "type": "array",
          "valueRange": Object {
            "end": 353,
            "start": 331,
          },
        },
        Object {
          "key": 2,
          "keyRange": null,
          "parent": [Circular],
          "type": "number",
          "value": "1",
          "valueRange": Object {
            "end": 360,
            "start": 360,
          },
        },
        Object {
          "key": 3,
          "keyRange": null,
          "parent": [Circular],
          "type": "string",
          "value": "2",
          "valueRange": Object {
            "end": 363,
            "start": 363,
          },
        },
        Object {
          "key": 4,
          "keyRange": null,
          "parent": [Circular],
          "type": "null",
          "value": "null",
          "valueRange": Object {
            "end": 369,
            "start": 366,
          },
        },
        Object {
          "key": 5,
          "keyRange": null,
          "parent": [Circular],
          "type": "boolean",
          "value": "false",
          "valueRange": Object {
            "end": 375,
            "start": 371,
          },
        },
        Object {
          "key": 6,
          "keyRange": null,
          "parent": [Circular],
          "type": "boolean",
          "value": "true",
          "valueRange": Object {
            "end": 380,
            "start": 377,
          },
        },
      ],
      "type": "array",
      "valueRange": Object {
        "end": 384,
        "start": 164,
      },
    },
  ],
  "type": "object",
  "valueRange": Object {
    "end": 386,
    "start": 0,
  },
}
`;

exports[`fixtures test array.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "properties": Array [
    Object {
      "key": 0,
      "keyRange": null,
      "parent": [Circular],
      "type": "number",
      "value": "1",
      "valueRange": Object {
        "end": 1,
        "start": 1,
      },
    },
    Object {
      "key": 1,
      "keyRange": null,
      "parent": [Circular],
      "type": "string",
      "value": "2",
      "valueRange": Object {
        "end": 4,
        "start": 4,
      },
    },
    Object {
      "key": 2,
      "keyRange": null,
      "parent": [Circular],
      "type": "null",
      "value": "null",
      "valueRange": Object {
        "end": 10,
        "start": 7,
      },
    },
    Object {
      "key": 3,
      "keyRange": null,
      "parent": [Circular],
      "type": "boolean",
      "value": "false",
      "valueRange": Object {
        "end": 16,
        "start": 12,
      },
    },
    Object {
      "key": 4,
      "keyRange": null,
      "parent": [Circular],
      "type": "boolean",
      "value": "true",
      "valueRange": Object {
        "end": 21,
        "start": 18,
      },
    },
  ],
  "type": "array",
  "valueRange": Object {
    "end": 22,
    "start": 0,
  },
}
`;

exports[`fixtures test boolean.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "boolean",
  "value": "false",
  "valueRange": Object {
    "end": 4,
    "start": 0,
  },
}
`;

exports[`fixtures test null.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "null",
  "value": "null",
  "valueRange": Object {
    "end": 3,
    "start": 0,
  },
}
`;

exports[`fixtures test number.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "number",
  "value": "123",
  "valueRange": Object {
    "end": 2,
    "start": 0,
  },
}
`;

exports[`fixtures test string.json 1`] = `
Object {
  "key": null,
  "keyRange": null,
  "parent": null,
  "type": "string",
  "value": "string",
  "valueRange": Object {
    "end": 6,
    "start": 1,
  },
}
`;
